2015-11-26  Andy Buckley  <andy.buckley@cern.ch>

	* Write out intermediate histogram files by default, with event interval of 10k.

2015-11-25  Andy Buckley  <andy.buckley@cern.ch>

	* Protect make-plots against lock-up due to partial pstricks command when there are no data points.

2015-11-17  Andy Buckley  <andy.buckley@cern.ch>

	* rivet-cmphistos: Use a ratio label that doesn't mention 'data' when plotting MC vs. MC.

2015-11-12  Andy Buckley  <andy.buckley@cern.ch>

	* Tweak plot and subplot sizing defaults in make-plots so the
	total canvas is always the same size by default.

2015-11-10  Andy Buckley  <andy.buckley@cern.ch>

	* Handle 2D histograms better in rivet-cmphistos (since they can't be overlaid)

2015-11-05  Andy Buckley  <andy.buckley@cern.ch>

	* Allow comma-separated analysis name lists to be passed to a single -a/--analysis/--analyses option.

	* Convert namespace-global const variables to be static, to suppress compiler warnings.

	* Use standard MAX_DBL and MAX_INT macros as a source for MAXDOUBLE and MAXINT, to suppress GCC5 warnings.

2015-11-04  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Adding LHCB inelastic xsection measurement (LHCB_2015_I1333223)

	* Adding ATLAS colour flow in ttbar->semileptonic measurement (ATLAS_2015_I1376945)

2015-10-07  Chris Pollard  <cpollard@cern.ch>

	* Release 2.4.0

2015-10-06  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Adding CMS_2015_I1327224 dijet analysis (Mjj>2 TeV)

2015-10-03  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Adding CMS_2015_I1346843 Z+gamma

2015-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* Important improvement in FourVector & FourMomentum: new reverse()
	method to return a 4-vector in which only the spatial component
	has been inverted cf. operator- which flips the t/E component as
	well.

2015-09-28  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Adding D0_2000_I503361 ZPT at 1800 GeV

2015-09-29  Chris Pollard  <cpollard@cern.ch>

	* Adding ATLAS_2015_CONF_2015_041
